--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p>"My intro to Git and colab"</p>
+	<b>"My intro to Git and colab"</b>
     <script type="text/javascript" src="./script.js">
 </script>
 
