--- a/main.html
+++ b/main.html
@@ -5,15 +5,16 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<title>Git</title>
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-<p>"My intro to Git and colab"</p>
+	<div>
+	<p><b>My intro to Git and colab</b></p>
     <script type="text/javascript" src="./script.js">
-		
-</script>
-
+   </script>
+</div>
 </body>
 
 </html>
